tests/baselines/reference/privateNameWeakMapCollision.errors.txt
tests/cases/compiler/privateNameWeakMapCollision.ts(2,9): error TS18027: Compiler reserves name 'WeakMap' when emitting private identifier downlevel.
tests/cases/compiler/privateNameWeakMapCollision.ts(3,9): error TS18027: Compiler reserves name 'WeakSet' when emitting private identifier downlevel.


==== tests/cases/compiler/privateNameWeakMapCollision.ts (2 errors) ====
    function test() {
        let WeakMap;
            ~~~~~~~
!!! error TS18027: Compiler reserves name 'WeakMap' when emitting private identifier downlevel.
        let WeakSet;
            ~~~~~~~
!!! error TS18027: Compiler reserves name 'WeakSet' when emitting private identifier downlevel.
        class C {
            #x;
        }
    }
    